my-apps/development/it-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: it-tools
  labels:
    app.kubernetes.io/name: it-tools
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: it-tools
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: it-tools
    spec:
      containers:
        - name: it-tools
          image: ghcr.io/sharevb/it-tools:nightly@sha256:c5138cc7aa8d3bf3c6dd96f72b01f33066f0ace2521a7516bc1fb7dedc312fea
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
