my-apps/development/it-tools/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: it-tools-route
  namespace: it-tools
  annotations:
    # ExternalDNS will create a CNAME record pointing to external.vanillax.me
    # which then points to the Cloudflare Tunnel
    external-dns.alpha.kubernetes.io/target: "external.vanillax.me"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-external
      namespace: gateway
  hostnames:
    - "it-tools.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: it-tools
          port: 8080
          weight: 1
